tests/invalid/type/list_sort_bad_compareTo_signature.pts
prototype Foo {
    int x;

    function compareTo(Foo other) : float {
        return 0.0;
    }
}

function main() : void {
    list<Foo> xs = [];
    xs.sort();
}
